--- a/src/public/template.html
+++ b/src/public/template.html
@@ -7,9 +7,10 @@
     <meta name="theme-color" content="#f5cc78">
     <title>HN</title>
     <link rel="manifest" href="/manifest.json">
+    <!-- ::CSS:: -->
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root"><!-- ::APP:: --></div>
     <script type="text/javascript">
       (function() {
         const css = document.createElement('link');
@@ -19,6 +20,7 @@
         document.getElementsByTagName('head')[0].appendChild(css);
       })();
     </script>
+    <!-- ::JS:: -->
     <noscript>
       You need the JS
     </noscript>
