WIP: Optimize bundle size

--- a/src/public/template.html
+++ b/src/public/template.html
@@ -5,8 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#f5cc78">
+    <meta name="keywords" content="hacker news">
     <title>HN</title>
     <link rel="manifest" href="/manifest.json">
+    <meta name='GIT_HASH' content='<!-- ::GIT_HASH:: -->'/>
+    <meta name='GIT_STATUS' content='<!-- ::GIT_STATUS:: -->' />
+    <meta name='BUILD_TIME' content='<!-- ::BUILD_TIME:: -->' />
     <!-- ::CSS:: -->
   </head>
   <body>
