WIP: Switch back to emotion

--- a/src/public/template.html
+++ b/src/public/template.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#f5cc78">
     <meta name="keywords" content="hacker news">
+    <meta name="Description" content="Super Fast HNPWA">
     <title>HN</title>
     <link rel="manifest" href="/manifest.json">
     <meta name='GIT_HASH' content='<!-- ::GIT_HASH:: -->'/>
