--- a/src/public/template.html
+++ b/src/public/template.html
@@ -13,21 +13,10 @@
     <meta name='GIT_STATUS' content='<!-- ::GIT_STATUS:: -->' />
     <meta name='BUILD_TIME' content='<!-- ::BUILD_TIME:: -->' />
     <!-- ::CSS:: -->
+    <!-- ::JS:: -->
   </head>
   <body>
     <div id="root"><!-- ::APP:: --></div>
-    <script type="text/javascript">
-      (function() {
-        const css = document.createElement('link');
-        css.href = '//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css';
-        css.rel = 'stylesheet';
-        css.type = 'text/css';
-        document.getElementsByTagName('head')[0].appendChild(css);
-      })();
-    </script>
-    <!-- ::JS:: -->
-    <noscript>
-      You need the JS
-    </noscript>
+    <noscript>You need JS</noscript>
   </body>
 </html>
