--- a/src/public/template.html
+++ b/src/public/template.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="theme-color" content="#f5cc78">
+    <meta name="theme-color" content="#FF6600">
     <meta name="keywords" content="hacker news">
-    <meta name="Description" content="Super Fast HNPWA">
+    <meta name="Description" content="HackerNews app">
     <title>HN</title>
     <link rel="manifest" href="/manifest.json">
     <meta name='GIT_HASH' content='<!-- ::GIT_HASH:: -->'/>
